// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Button danger to match snapshot 1`] = `
<button
  className="button -danger"
  onClick={[Function]}
>
  Click me danger
</button>
`;

exports[`Should Button default to match snapshot 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  Click me default
</button>
`;

exports[`Should Button success to match snapshot 1`] = `
<button
  className="button -success"
  onClick={[Function]}
>
  Click me success
</button>
`;
